--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <style>
       @import url('./styles/style.css');
       @import url('./styles/home.css');
+      @import url('./styles/list.css');
+      @import url('./styles/edit.css');
     </style>
     <title>Reminder</title>
   </head>
