--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <main></main>
 
     <script defer src="./scripts/utils.js"></script>
+    <script defer src="./scripts/list.js"></script>
     <script defer src="./scripts/index.js"></script>
   </body>
 </html>
