--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     <script defer src="./scripts/utils.js"></script>
     <script defer src="./scripts/list.js"></script>
+    <script defer src="./scripts//edit.js"></script>
     <script defer src="./scripts/index.js"></script>
   </body>
 </html>
