--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="manifest"
+      href="./manifest.webmanifest"
+      crossorigin="use-credentials"
+    />
     <style>
       @import url('./styles/style.css');
       @import url('./styles/home.css');
@@ -11,6 +16,9 @@
       @import url('./styles/edit.css');
     </style>
     <title>Reminder</title>
+    <script>
+      navigator.serviceWorker.register('./sw.js');
+    </script>
   </head>
   <body>
     <main></main>
