--- a/index.html
+++ b/index.html
@@ -9,6 +9,29 @@
       href="./manifest.webmanifest"
       crossorigin="use-credentials"
     />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="apple-mobile-web-app-title" content="PWA" />
+    <link
+      rel="apple-touch-icon"
+      sizes="72x72"
+      href="/imagens/icones/apple-icon-72x72.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="144x144"
+      href="/imagens/icones/apple-icon-144x144.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="/imagens/icones/apple-icon-152x152.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/imagens/icones/apple-icon-180x180.png"
+    />
     <style>
       @import url('./styles/style.css');
       @import url('./styles/home.css');
