update icon ref

--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
     <link
       rel="apple-touch-icon"
       sizes="72x72"
-      href="/imagens/icons/apple-icon-72x72.png"
+      href="./assets/icons/apple-icon-72x72.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="144x144"
-      href="/imagens/icons/apple-icon-144x144.png"
+      href="./assets/icons/apple-icon-144x144.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="152x152"
-      href="/imagens/icons/apple-icon-152x152.png"
+      href="./assets/icons/apple-icon-152x152.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="/imagens/icons/apple-icon-180x180.png"
+      href="./assets/icons/apple-icon-180x180.png"
     />
     <style>
       @import url('./styles/style.css');
